--- a/src/pages/globals.scss
+++ b/src/pages/globals.scss
@@ -11,6 +11,8 @@
   list-style: none;
   text-decoration: none;
   box-sizing: border-box;
+  font-family: 'Mona Sans', sans-serif;
+  transition: all 300ms ease;
 }
 
 ::-webkit-scrollbar {
