--- a/src/styles/Navbar.module.scss
+++ b/src/styles/Navbar.module.scss
@@ -3,27 +3,59 @@
 
 .navbar {
   color: $white;
-  // @include sectionPadding();
-  // width: 100vw ;
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 3rem;
+  position: absolute;
+  @include sectionPadding();
+  padding-top: 3rem;
+  width: 100%;
 
-  // &__right {
-  // }
 
   &__left {
+    // border: 2px solid #fff;
+    height: 3rem;
+    display: inline-flex;
+    position: relative;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
+  }
+
+  &__right {
     display: flex;
-    gap: 3rem;
+    gap: 2.5rem;
+    a {
+      text-decoration: none;
+      color: $white;
+    }
 
     li {
       cursor: pointer;
       transition: $transition;
+      font-size: $font-size-16 - 0.15rem;
 
       &:hover {
         transition: $transition;
         color: $primary-color;
+      }
+    }
+
+    .active {
+      position: relative;
+      &::after {
+        position: absolute;
+        width: 6px;
+        height: 6px;
+        border-radius: 100%;
+        background-color: $primary-color;
+        bottom: -8px;
+        left: 50%;
+        transform: translateX(-50%);
+        content: '';
       }
     }
   }
