--- a/src/styles/AboutUs.module.scss
+++ b/src/styles/AboutUs.module.scss
@@ -1,10 +1,15 @@
 @import "./reuseables";
 @import "./variables.scss";
 
+.section__title {
+  color: $primary-color;
+}
+
 .aboutUs {
   @include sectionPadding();
   display: flex;
   flex-direction: column;
+  margin-top: 5rem;
   gap: 3rem;
 
   &__top {
@@ -15,7 +20,7 @@
   &__left {
     width: 100%;
     position: relative;
-    
+
     .starImage {
       position: absolute;
       border-radius: 50%;
@@ -40,11 +45,17 @@
       color: $secondary-color;
       font-size: $font-size-24;
       font-weight: $fontWeight-700;
-
-      p {
-        color: blue;
-        line-height: 30.84px;
-      }
+    }
+    p {
+      color: #222;
+      font-size: 1.25rem;
+      font-family: Mona Sans;
+      font-style: normal;
+      font-weight: 500;
+    }
+    button {
+      width: fit-content;
+      @include medium-button();
     }
   }
 
@@ -52,11 +63,158 @@
     background-color: $primary-color;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 1.5rem;
 
     p {
       font-size: 1rem;
       color: $white;
+    }
+
+    button {
+      @include medium-button();
+      font-weight: $fontWeight-600;
+      background-color: $white;
+      color: $secondary-color;
+    }
+  }
+}
+
+/****** Team Style *****/
+
+.team {
+  background: #f3f4f6;
+  @include sectionPadding();
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  justify-content: center;
+  align-items: center;
+
+  h3 {
+    color: $secondary-color;
+    font-size: 3.02913rem;
+    font-family: Mona Sans;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+  }
+
+  &__people {
+    display: flex;
+    gap: 4rem;
+
+    .team__person {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    p {
+      display: flex;
+      padding: 0.75rem 1.625rem;
+      gap: 0.5rem;
+      width: fit-content;
+      border-radius: 0rem 0rem 1.25rem 1.25rem;
+      background: $primary-color;
+      color: $white;
+    }
+
+    .team__image {
+      height: auto;
+      width: 15rem;
+      object-fit: contain;
+      border-radius: 1rem;
+    }
+  }
+}
+
+/****** Team Style *****/
+.testimonials__container {
+  @include sectionPadding();
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+
+  h2 {
+    color: $secondary-color;
+    font-size: 3.02913rem;
+    font-family: Mona Sans;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+  }
+
+  .testimonials {
+    display: flex;
+    gap: 2rem;
+    width: 100%;
+    height: fit-content;
+    overflow-y: scroll;
+    padding: 1.5rem 0;
+  }
+
+  .testimonial {
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    padding: 1rem;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+    border-radius: 1.125rem;
+    background: linear-gradient(
+      180deg,
+      #f2f3f5 0%,
+      rgba(243, 244, 246, 0.5) 100%
+    );
+
+    p {
+      color: #222;
+      font-size: 1rem;
+      font-family: Mona Sans;
+      font-style: normal;
+      font-weight: 400;
+      width: 14rem;
+      height: 7rem;
+    }
+  }
+  .testimonial__image__container {
+    width: 3.5rem;
+    height: 3.5rem;
+    flex-shrink: 0;
+    border-radius: 3.5rem;
+    background: $primary-color;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    right: 0;
+    bottom: -1rem;
+    z-index: 99;
+
+    .testimonial__image {
+      width: 3.125rem;
+      height: 3.125rem;
+      flex-shrink: 0;
+      border-radius: 3.125rem;
+    }
+  }
+
+  .moveTestimonial {
+    display: flex;
+    gap: 2rem;
+    .move {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 3rem;
+      height: 3rem;
+      border-radius: 100%;
+      background: $secondary-color;
     }
   }
 }
