--- a/src/styles/Contact.module.scss
+++ b/src/styles/Contact.module.scss
@@ -10,5 +10,5 @@
   @include sectionPadding();
   min-height: 50vh;
   background-position: center;
-  background-attachment: cover;
+  background-attachment: fixed;
 }
