--- a/src/styles/Navbar.module.scss
+++ b/src/styles/Navbar.module.scss
@@ -12,10 +12,9 @@
   padding-top: 3rem;
   width: 100%;
 
-
   &__left {
     // border: 2px solid #fff;
-    height: 3rem;
+    height: 4rem;
     display: inline-flex;
     position: relative;
     img {
@@ -55,7 +54,7 @@
         bottom: -8px;
         left: 50%;
         transform: translateX(-50%);
-        content: '';
+        content: "";
       }
     }
   }
