update team section

--- a/src/styles/AboutUs.module.scss
+++ b/src/styles/AboutUs.module.scss
@@ -18,9 +18,9 @@
     right: 0;
     bottom: 50%;
 
-    .float__navDiv {
-      // position: fixed;
-    }
+    // .float__navDiv {
+    //   // position: fixed;
+    // }
   }
 
   &__top {
@@ -133,7 +133,7 @@
     }
 
     strong {
-      margin-top: 0.2rem;
+      margin-top: 0.5rem;
     }
 
     h4 {
