--- a/src/styles/MainHeader.module.scss
+++ b/src/styles/MainHeader.module.scss
@@ -21,8 +21,12 @@
     flex-direction: column;
     gap: 1rem;
 
+    p {
+      font-size: 1.5rem;
+    }
+
     h1 {
-      font-size: 3rem;
+      font-size: 3.5rem;
       // border: 1px solid #fff;
       width: fit-content;
       // font-style: ;
